--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,7 @@
 
 server:
   port: 8019
+
 spring:
   application:
     name: GestUser
@@ -19,3 +20,5 @@ spring:
       port: 37017
       username: adiener
       auto-index-creation: true
+  config:
+    import: classpath:application-secret.yml
